--- a/app/views/site/welcome/index.html.erb
+++ b/app/views/site/welcome/index.html.erb
@@ -1,2 +1,15 @@
 <h1>Site::Welcome#index</h1>
 <p>Find me in app/views/site/welcome/index.html.erb</p>
+
+<% if user_signed_in? %>
+<p>Usuário está LOGADO / <%= current_user.email %></p>
+
+<% else %>
+<p>Usuário NÃO está LOGADO</p>
+<% end %>
+
+<% if admin_signed_in? %>
+<p>Administrador está LOGADO / <%= current_admin.email %> </p>
+<% else %>
+<p>Administrador NÃO está LOGADO</p>
+<% end %>
