--- a/app/views/admins_backoffice/admins/edit.html.erb
+++ b/app/views/admins_backoffice/admins/edit.html.erb
@@ -17,26 +17,28 @@
     <div class="panel-body">
         <div class="row">
             <div class="col-lg-6">
-                <form role="form">
+                <%= form_with(model: [ :admins_backoffice, @admin], local:true) do |form| %>
               
                     <div class="form-group">
-                        <label>Email</label>
-                        <input class="form-control" placeholder="Enter text">
+                       
+                        <%= form.label :email %>
+                        <%= form.text_field :email, class:"form-control", placeholder:"Email do Administrador" %>
+                        
                     </div>
 
                        <div class="form-group">
-                        <label>Senha</label>
-                        <input class="form-control" placeholder="Enter text">
+                       	 <%= form.label :password %>
+                        <%= form.text_field :password, class:"form-control", placeholder:"Email do Administrador" %>
                     </div>
                     
                        <div class="form-group">
-                        <label>Confirmação da senha</label>
-                        <input class="form-control" placeholder="Enter text">
+                       	 <%= form.label :password_confirmation %>
+                        <%= form.text_field :password_confirmation, class:"form-control", placeholder:"Email do Administrador" %>
                     </div>
                     
-                    <button type="submit" class="btn btn-default">Submit Button</button>
+                    <button type="submit" class="btn btn-default">Salvar</button>
                     
-                </form>
+                <% end %>
             </div>
             <!-- /.col-lg-6 (nested) -->
         </div>
