--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -30,10 +30,10 @@
           	<i class="fa fa-edit"></i>
           	<% end %>
 
+					<%= link_to admins_backoffice_admin_path(admin), method: :delete, class:"btn btn-danger btn-circle", data: {confirm: "Deseja realmente excluir esse administrador?"} do %>
+          	<i class="fa fa-minus"></i>
+          	<% end %>
 
-          	<button type="button" class="btn btn-danger btn-circle">
-          		<i class="fa fa-minus"></i>
-          	</button>
 	        </td>
 	    </tr>
 	    <% end %>
