--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -88,6 +88,12 @@
                            <% end %>
                         </li>
 
+                         <li>
+                           <%= link_to '#' do %>
+                             <i class="fa fa-file-text-o fa-fw"></i> Assuntos/areas 
+                           <% end %>
+                        </li>
+
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
