Criando as views (index e delete) para as Questoes

--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -94,11 +94,18 @@
                            <% end %>
                         </li>
 
+                             <li>
+                           <%= link_to admins_backoffice_questions_path do %>
+                             <i class="fa fa-th-list"></i> Perguntas
+                           <% end %>
+                        </li>
+
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
             </div>
             <!-- /.navbar-static-side -->
+        </nav>
         </nav>
 
         <!-- Page Content -->
