--- a/app/views/admins_backoffice/questions/shared/_form.html.erb
+++ b/app/views/admins_backoffice/questions/shared/_form.html.erb
@@ -31,7 +31,12 @@
                         
                             <div class="form-group">
                                 <%= form.label :description %>
-                                <%= form.text_field :description, class:"form-control", placeholder:"Descrição da Pergunta"  %>
+                                <%= form.text_area :description, class:"form-control", placeholder:"Descrição da Pergunta", rows: 5  %>
+                            </div>
+
+                              <div class="form-group">
+                                <%= form.label :subject_id %>
+                                <%= form.collection_select(:subject_id, Subject.all, :id, :description,{}, { class:"form-control" }) %>
                             </div>
 
                             <button type="submit" class="btn btn-default">Salvar</button>
