--- a/app/views/admins_backoffice/questions/index.html.erb
+++ b/app/views/admins_backoffice/questions/index.html.erb
@@ -11,8 +11,8 @@
 		<thead>
 	    <tr>
 	        <th>#</th>
-	        <th>Descrição</th>
-	        <th>Assunto</th>
+	        <th><%= translate_attributes(@questions, :description) %></th>
+	        <th><%= translate_attributes(@questions, :subject) %></th>
 	        <th>
 	        	<%= link_to new_admins_backoffice_question_path, class:"btn btn-success btn-circle" do %>
           	<i class="fa fa-plus"></i>
