--- a/app/views/admins_backoffice/subjects/shared/_form.html.erb
+++ b/app/views/admins_backoffice/subjects/shared/_form.html.erb
@@ -1,3 +1,4 @@
+  
 <div class="row">
     <div class="col-lg-12">
         <h1 class="page-header"><%= action_message %></h1>
@@ -22,7 +23,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <%= "#{action_message} Assunto/Área" %>
+                <%= @subject.model_name.human %>
             </div>
             <div class="panel-body">
                 <div class="row">
@@ -31,10 +32,14 @@
                         
                             <div class="form-group">
                                 <%= form.label :description %>
-                                <%= form.text_field :description, class:"form-control", placeholder:"Descrição do Assunto/Área"  %>
+                                <%= form.text_field :description, 
+                                         class:"form-control", 
+                                         placeholder: t('placeholder.subject_description')  %>
                             </div>
 
-                            <button type="submit" class="btn btn-default">Salvar</button>
+                            <button type="submit" class="btn btn-default">
+                              <%= t('button.save') %>
+                            </button>
                         <% end %>
                     </div>
                     <!-- /.col-lg-6 (nested) -->
