--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -1,21 +1,16 @@
-
 <!DOCTYPE html>
-<html >
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  
 
     <title>TimeToAnswer</title>
-     <%= csrf_meta_tags %>
+    <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-     <%= stylesheet_link_tag    'application' %>
-     <%= stylesheet_link_tag    'site' %>
-
-
+    <%= stylesheet_link_tag    'application' %>
+    <%= stylesheet_link_tag    'site' %>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -41,24 +36,28 @@
             <a class="navbar-brand" href="#">Time to Answer</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav"> </ul>       
+            <ul class="nav navbar-nav"></ul>
             <ul class="nav navbar-nav navbar-right">
               <% unless user_signed_in? %>
-              <li><%= link_to 'Entrar',new_user_session_path %></li>
-              <li><%= link_to 'Cadastrar-se',new_user_registration_path %></li>
-
-              <% else %>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <%= link_to destroy_user_session_path, method: :delete do %>
-                            <i class="fa fa-sign-out fa-fw"></i> Sair
-                        <% end %> 
-                  </li>
-                 
-                </ul>
-              </li>
+                <li><%= link_to 'Entrar', new_user_session_path %></li>
+                <li><%= link_to 'Cadastrar-se', new_user_registration_path %></li>
+              <% else%>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <%= link_to users_backoffice_welcome_index_path do %>
+                          <i class="fa fa-user fa-fw"></i> Perfil
+                      <% end %>
+                    </li>
+                    <li role="separator" class="divider"></li>
+                    <li>
+                      <%= link_to destroy_user_session_path, method: :delete do %>
+                          <i class="fa fa-sign-out fa-fw"></i> Sair
+                      <% end %>
+                    </li>
+                  </ul>
+                </li>
               <% end %>
             </ul>
           </div><!--/.nav-collapse -->
@@ -67,18 +66,22 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-       <%= yield %>
+        <%= yield %>
       </div>
-
-       
-
     </div> <!-- /container -->
 
 
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'site' %>
-
-  
+    <% if notice %>
+        <%= javascript_tag do %>
+            $.bootstrapGrowl('<%= notice %>', {
+            type: 'success', // (null, 'info', 'danger', 'success')
+            align: 'right', // ('left', 'right', or 'center')
+            allow_dismiss: true, // If true then will display a cross to close the popup.
+            stackup_spacing: 10 // spacing between consecutively stacked growls.
+            });
+        <% end %>
+    <% end %>
   </body>
-</html>
-
+</html
