--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -66,8 +66,27 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <%= yield %>
+        <h1>Site::Welcome#index</h1>
+        <p>Find me in app/views/site/welcome/index.html.erb</p>
+
+        <% if user_signed_in? %>
+        <p>Usuário está LOGADO / <%= current_user.email %></p>
+
+        <% else %>
+        <p>Usuário NÃO está LOGADO</p>
+        <% end %>
+
+        <% if admin_signed_in? %>
+        <p>Administrador está LOGADO / <%= current_admin.email %> </p>
+        <% else %>
+        <p>Administrador NÃO está LOGADO</p>
+        <% end %>
+
+
       </div>
+
+      <%= yield %>
+
     </div> <!-- /container -->
 
 
