--- a/app/views/site/welcome/index.html.erb
+++ b/app/views/site/welcome/index.html.erb
@@ -1,15 +1,16 @@
-<h1>Site::Welcome#index</h1>
-<p>Find me in app/views/site/welcome/index.html.erb</p>
+<% @questions.each do |question| %>
 
-<% if user_signed_in? %>
-<p>Usuário está LOGADO / <%= current_user.email %></p>
 
-<% else %>
-<p>Usuário NÃO está LOGADO</p>
-<% end %>
-
-<% if admin_signed_in? %>
-<p>Administrador está LOGADO / <%= current_admin.email %> </p>
-<% else %>
-<p>Administrador NÃO está LOGADO</p>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title"><%= question.description %></h3>
+  </div>
+  <div class="panel-body">
+    <ul>
+    	<% question.answers.each do |answer| %>
+    	<li> <%= answer.description %> </li>
+    	<% end %>
+    </ul>
+  </div>
+</div>
 <% end %>
