--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -78,23 +78,11 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Site::Welcome#index</h1>
-        <p>Find me in app/views/site/welcome/index.html.erb</p>
-
-        <% if user_signed_in? %>
-        <p>Usuário está LOGADO / <%= current_user.email %></p>
-
+         <% unless params[:term] %>
+        <h3>Últimas perguntas cadastradas...</h3>
         <% else %>
-        <p>Usuário NÃO está LOGADO</p>
+        <h3><%= "Resultados para o termo params \"#{params[:term]}\"... "%></h3>
         <% end %>
-
-        <% if admin_signed_in? %>
-        <p>Administrador está LOGADO / <%= current_admin.email %> </p>
-        <% else %>
-        <p>Administrador NÃO está LOGADO</p>
-        <% end %>
-
-
       </div>
 
       <%= yield %>
@@ -115,4 +103,4 @@
         <% end %>
     <% end %>
   </body>
-</html
+</html>
