--- a/app/views/site/answer/question.html.erb
+++ b/app/views/site/answer/question.html.erb
@@ -1,1 +1,5 @@
-<h1> O ID da resposta selecionada é:<%= params[:answer] %> </h1>
+<% if @answer.correct %>
+	<h1 style="color: green;">Parabéns você acertou! \o/</h1>
+<% else %>
+	<h1 style="color: red;">Infelizmente você ERROU! \o/</h1>
+<% end %>
