--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -216,6 +216,10 @@
         <% end %>
     <% end %>
 
-
+    <%= javascript_tag do %>
+    $(function() {
+      $('.datepicker').datepicker();
+    });
+    <% end %>
   </body>
 </html>
