--- a/app/views/users_backoffice/profile/edit.html.erb
+++ b/app/views/users_backoffice/profile/edit.html.erb
@@ -90,7 +90,7 @@
 	                        	<div class="form-group">
 	                        <%= profile_form.label :birthdate, class:"col-form-label col-md-3 col-sm-3 label-align" %>
 	                        <div class="col-md-6 col-sm-6 col-xs-12">
-	                        <%= profile_form.text_field :birthdate, class:"form-control col-md-7 col-xs-12" %>
+	                        <%= profile_form.text_field :birthdate, value:I18n.l(@user.user_profile.birthdate), class:"form-control col-md-7 col-xs-12 datepicker" %>
 	                        </div>
 	                     </div>
                      <% end %>
