--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -10,7 +10,6 @@
     <title>TimeToAnswer</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application' %>
     <%= stylesheet_link_tag    'users_backoffice' %>
 
@@ -30,10 +29,10 @@
             <!-- menu profile quick info -->
             <div class="profile clearfix">
               <div class="profile_pic">
-                <%= image_tag 'img.jpg', alt:"...", class:"img-circle profile_img" %>
+                <%= link_to image_tag('img.jpg', alt:"...", class:"img-circle profile_img"), '#', "data-toggle":"modal", "data-target":"#avatarModal" %>
               </div>
               <div class="profile_info">
-                <span>Seja Bem-Vindo,</span>
+                <span>Seja bem-vindo,</span>
                 <h2><%= current_user.full_name %></h2>
               </div>
             </div>
@@ -46,17 +45,15 @@
               <div class="menu_section">
                 <ul class="nav side-menu">                  
                   <li>
-                    <%= link_to users_backoffice_welcome_index_path do  %>
-                    <i class="fa fa-home"></i>Inicio
+                    <%= link_to users_backoffice_welcome_index_path do %>
+                      <i class="fa fa-home"></i>Início
                     <% end %>
                   </li>
-
                   <li>
-                    <%= link_to users_backoffice_profile_path do  %>
-                    <i class="fa fa-user"></i>Dados do Perfil
+                    <%= link_to users_backoffice_profile_path do %>
+                      <i class="fa fa-user"></i>Dados do Perfil
                     <% end %>
                   </li>
-
                 </ul>
               </div>
 
@@ -184,8 +181,8 @@
         <!-- page content -->
         <div class="right_col" role="main">
           <div class="">
-            <div class="page-title">    
-               <%= yield %>
+            <div class="page-title">
+              <%= yield %>
             </div>
           </div>
         </div>
@@ -202,10 +199,30 @@
       </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="avatarModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /Modal -->
+
+
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'users_backoffice' %>
-
-        <% if notice %>
+    <% if notice %>
         <%= javascript_tag do %>
             $.bootstrapGrowl('<%= notice %>', {
             type: 'success', // (null, 'info', 'danger', 'success')
@@ -215,11 +232,10 @@
             });
         <% end %>
     <% end %>
-
     <%= javascript_tag do %>
-    $(function() {
-      $('.datepicker').datepicker();
-    });
-    <% end %>
+       $(function() {
+         $('.datepicker').datepicker();
+       });
+    <% end  %>
   </body>
 </html>
