Forçando o usuário a efetuar login

--- a/app/views/site/shared/_questions.html.erb
+++ b/app/views/site/shared/_questions.html.erb
@@ -39,6 +39,13 @@
   <% end %>
 <% end %>
 
+<% if user_signed_in? %>
 <div class="text-center">
   <%= paginate @questions %>
 </div>
+<% else %>
+<div class="alert alert-warning" role="alert">
+  Efetue Login para poder continuar respondendo as questões...
+</div>
+
+<% end %>
