--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,16 +1,34 @@
-<h2>Forgot your password?</h2>
+ <div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+    <a class="hiddenanchor" id="signin"></a>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="login_wrapper">
+      <div class="animate form login_form">
+        <section class="login_content">
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+            <h1>Esqueceu a senha?</h1>
+          
+            <div>
+             
+              <%= f.email_field :email, autofocus: true, placeholder:"Email", class:"form-control" %>
+            </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+            <div>
+              
+              <%= f.submit "Enviar instruções para o meu Email", class:"btn btn-default submit", style: "float: none; margin-left: 0px; " %>
+              
+                          
+            </div>
 
-<%= render "users/shared/links" %>
+            <div class="clearfix"></div>
+
+            <div class="separator"></div> 
+            <% end %>        
+       
+        </section>
+      </div>
+
+      
+      </div>
+    </div>
+    </div>
